Created Product and Transaction related UnitTests. (#47)